--- a/src/demo-app/demo-app/demo-app.html
+++ b/src/demo-app/demo-app/demo-app.html
@@ -1,12 +1,20 @@
 <md-sidenav-layout class="demo-root" fullscreen>
-  <md-sidenav #start>
+  <md-sidenav mode="side" #start opened>
     <md-nav-list>
-      <a *ngFor="let navItem of navItems"
-         md-list-item
-         (click)="start.close()"
-         [routerLink]="[navItem.route]">
-        {{navItem.name}}
-      </a>
+      <div *ngFor="let navCategory of navItems">
+        <md-list-item md-list-item [md-expansion-panel-trigger-for]="panel" class="category">
+          <span>{{navCategory.name}}</span>
+          <md-icon class="expand" [class.is-opened]="panel.isOpened">expand_more</md-icon>
+        </md-list-item>
+        <md-expansion-panel #panel>
+          <a *ngFor="let navItem of navCategory.list"
+             md-list-item
+             (click)="start.close()"
+             [routerLink]="[navItem.route]">
+            {{navItem.name}}
+          </a>
+        </md-expansion-panel>
+      </div>
 
       <hr>
 
@@ -19,18 +27,17 @@
     <button md-button (click)="start.close()">CLOSE</button>
   </md-sidenav>
   <div>
-    <md-toolbar color="primary">
+    <md-toolbar color="primary" class="demo-toolbar">
       <button md-icon-button (click)="start.open()">
         <md-icon class="md-24" >menu</md-icon>
       </button>
-      <div class="demo-toolbar">
+      <div class="demo-toolbar-content">
         <h1>Angular Material 2 Demos</h1>
         <button md-button (click)="root.dir = (root.dir == 'rtl' ? 'ltr' : 'rtl')" title="Toggle between RTL and LTR">
           {{root.dir.toUpperCase()}}
         </button>
       </div>
     </md-toolbar>
-
     <div #root="$implicit" dir="ltr" class="demo-content">
       <router-outlet></router-outlet>
     </div>
